Snap Selection to Current Frame does not replace keyframes on same frame #101996

Closed
opened 2022-10-22 12:59:27 +02:00 by Julien Kaspar · 10 comments
Member

System Information
Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-21 06:51, hash: 5814e35af1
Worked: (newest version of Blender that worked as expected)

Short description of error
Typically when moving keyframes onto already exisiting keyframes, they will be replaced.
Unfortunately when using the snapping operators this is not the case, whcih results in multiple keyframes on the same frame.

2022-10-22 12-52-19.mp4

With the graph editor this is very visible when it happens, but I encountered this often when using the dope sheet editor, where this effect is invisible.

Exact steps for others to reproduce the error

  • Add a simple animation on the default cube
  • Show the graph editor
  • Select keyframes on one frame and move them onto another keyframe
  • Try the same by selecting the keyframes and using the Snap option from the title
**System Information** Operating system: Linux-5.15.0-52-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-21 06:51, hash: `5814e35af1` Worked: (newest version of Blender that worked as expected) **Short description of error** Typically when moving keyframes onto already exisiting keyframes, they will be replaced. Unfortunately when using the snapping operators this is not the case, whcih results in multiple keyframes on the same frame. [2022-10-22 12-52-19.mp4](https://archive.blender.org/developer/F13748799/2022-10-22_12-52-19.mp4) With the graph editor this is very visible when it happens, but I encountered this often when using the dope sheet editor, where this effect is invisible. **Exact steps for others to reproduce the error** - Add a simple animation on the default cube - Show the graph editor - Select keyframes on one frame and move them onto another keyframe - Try the same by selecting the keyframes and using the Snap option from the title
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Member

Added subscribers: @dr.sybren, @lichtwerk

Added subscribers: @dr.sybren, @lichtwerk
Member

posttrans_fcurve_clean is a feature of the transform system.
Could be exposed elsewhere though and used in snap_graph_keys / snap_action_keys though.

@dr.sybren : objections?

`posttrans_fcurve_clean` is a feature of the transform system. Could be exposed elsewhere though and used in `snap_graph_keys` / `snap_action_keys` though. @dr.sybren : objections?

In #101996#1436639, @lichtwerk wrote:
posttrans_fcurve_clean is a feature of the transform system.
Could be exposed elsewhere though and used in snap_graph_keys / snap_action_keys though.

I think that having a state, after snapping, that cannot be reproduced in any way is a bad idea. So yeah, I see this as a bug, and I think applying posttrans_fcurve_clean after snapping would be a good one.

Would probably be two patches:

  1. Non-functional refactor to move the posttrans_fcurve_clean function to BKE. It could be named something like BKE_fcurve_merge_duplicate_keys so that it's named after what it does, and not after when it's called.
  2. Functional patch to use this function in other places, like the snapping functions.
> In #101996#1436639, @lichtwerk wrote: > `posttrans_fcurve_clean` is a feature of the transform system. > Could be exposed elsewhere though and used in `snap_graph_keys` / `snap_action_keys` though. I think that having a state, after snapping, that cannot be reproduced in any way is a bad idea. So yeah, I see this as a bug, and I think applying `posttrans_fcurve_clean` after snapping would be a good one. Would probably be two patches: 1. Non-functional refactor to move the `posttrans_fcurve_clean` function to BKE. It could be named something like `BKE_fcurve_merge_duplicate_keys` so that it's named after what it does, and not after when it's called. 2. Functional patch to use this function in other places, like the snapping functions.
Philipp Oeser self-assigned this 2022-11-08 13:38:12 +01:00
Member

OK, will put on my desk

OK, will put on my desk

This issue was referenced by a179246e1f

This issue was referenced by a179246e1fdf36c19c0c5d196da1190aa3984c4b

This issue was referenced by b5ebc9bb24

This issue was referenced by b5ebc9bb24ae5bb539878a7884154827bce4a7d7
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101996
No description provided.